--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,8 @@
     "email": "austin@cia.lol"
   },
   "dependencies": {
+    "@wojtekmaj/react-hooks": "^2.0.4",
+    "pdfjs-dist": "^5.4.296",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-pdf": "^10.2.0"
